
Editor:
 - Editor requires .NET Framework 4.5 to run. Dropped Windows XP support.
 - Editor preferences are now stored using .NET configuration model, instead of the
   Windows registry.
 - Added support for custom UI color themes.
 - Game and room templates are now by default saved in AppData/Local/AGS folder.
   Editor finds them in both program folder and AppData.
 - Added "Allow relative asset resolutions" option to "Backwards Compatibility" section.
   Disabled by default, it makes game treat all sprites and rooms resolution as real one.
 - Added "Custom Say/Narrate function in dialog scripts" options which determine what
   functions are used when converting character lines in dialog scripts to real script.
 - New revamped sprite import window.
 - Sprites that were created using tiled import can now be properly reimported from source.
 - Added context menu command to open sprite's source file location.
 - Using Magick.NET library as a GIF loader. This should fix faulty GIF imports.
 - New sprite export dialog that lets you configure some export preferences, including
   remapping sprite source paths.
 - Sprites have "Real" resolution type by default. "Low" and "High resolution" are kept
   for backwards compatibility only. When importing older games resolution type will be
   promoted to "Real" whenever it matches the game.
 - New navigation bar in the room editor, which allows to select any room object
   or region for editing, show/hide and lock room objects and regions in any combination.
   These settings are saved in the special roomXXX.crm.user files.
 - Improved how Room zoom slider works, now supports downscale.
 - Added "Export mask to file" tool button to the Room Editor.
 - Added MaskResolution property to Rooms. It ranges from 1:1 to 1:4 and lets you define
   the precision of Hotspot, Regions and Walkable Areas relative to room background.
 - Added "Default room mask resolution" to General Settings, which value will be applied